--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
   "bugs": {
     "url": "https://github.com/ASKVTYO/Stickman/issues"
   },
-  "homepage": "https://github.com/ASKVTYO/Stickman#readme"
+  "homepage": "https://github.com/ASKVTYO/Stickman#readme",
+  "engines": {
+    "node": "^7.10.1",
+    "yarn": "0.27.5"
+  }
 }
